--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"consumerKey": "N5v3duYOf0IUaqfGWo3YvVKxE",
-	"consumerSecret": "ENLbFkuB2KA2BDtbZfiVf5PdbghA8lBrMefHreeyacRfwCDnHI",
-	"accessToken": "2732826655-yAUfPAAUwGsgAo7ZRs7ePJckWN1bNLHHluzDFtD",
-	"accessTokenSecret": "z9LIg2GFkq8H5AZqop0JGhUc8E4E4ClM5pRSO5s0MoRkH"
+	"consumerKey": "....",
+	"consumerSecret": "....",
+	"accessToken": "....",
+	"accessTokenSecret": "...."
 }
